--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Data Analytics Meta Skills Badge</title>
 </head>
 <body>
-    <h1>My Badge</h1>
+    <h1>Data Analytics Meta Skills Badge</h1>
     <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="1e03b807-4fa2-46ee-8770-bca14df4c0f8" data-share-badge-host="https://www.credly.com"></div>
     <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
 </body>
